correction alignement

--- a/css/style.css
+++ b/css/style.css
@@ -361,6 +361,7 @@ i.fa-location-dot{
 
 .activites .section-title{
     margin-bottom: 30px;
+    margin-left: 30px;
 }
 
 .activites-cards{
